# transcriber-web-app

./: .gitignore  AGENTS.md  INITIAL.md  README.md  pyproject.toml  requirements.txt  run.py  sample.env
PRPs/: transcriber-web-app.md
examples/: llm.py  transcribe.py
src/: __init__.py  app.py  config.yaml  errors.py  file_manager.py  integrated_display.py  llm.py  logging_config.py  transcribe.py  util.py
src/config/: __init__.py  app_config.py  test_config.py
src/handlers/: __init__.py  audio_handler.py  chat_handler.py  history_handler.py  settings_handler.py
tests/: __init__.py  conftest.py  test_app.py  test_chat_integration_compatibility.py  test_chat_workflow_integration.py  test_errors.py  test_file_manager.py  test_import_error_resolution.py  test_integrated_display.py  test_llm.py  test_run_entry_point.py  test_transcribe.py  test_util.py
tests/data/: README.md  test_config.yaml  test_transcript.txt
tests/playwright/: test_error_handling.py
tests/unit/: __init__.py  test_audio_handler.py  test_chat_handler.py  test_error_handling.py  test_history_handler.py  test_settings_handler.py
